# Track-All-Tasks

./: .gitignore  Cargo.toml  README.md
TATMacApp/: Package.swift
TATMacApp/Sources/TATMacApp/: ContentView.swift  StatusBarView.swift  TaskDetailView.swift  TaskViewModel.swift  main.swift
gui/src/: index.html  index.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
tat/: Cargo.toml  tasks.db  tauri.conf.json
tat-gui/: Cargo.toml  tauri.conf.json
tat-gui/html/: index.html
tat-gui/src/: main.rs
tat/src/: main.rs
tat_gui/: Cargo.toml  tauri.conf.json
tat_gui/src/: index.html  main.rs
