[package]
name = "tat_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.5", features = ["system-tray"] }
rusqlite = "0.29.0"
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "1.5"
